--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,22 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [ "./", "src/" ],
+      "@/components/*": [ "src/components/*" ],
+      "@/lib/*": [ "src/lib/*" ],
+      "@/pages/*": [ "src/pages/*" ],
+      "@/styles/*": [ "src/styles/*" ]
+    }
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "src/pages/index.jsx",
+    "src/pages/_app.jsx"
   ],
   "exclude": [
     "node_modules"
